@@ -1,13 +1,13 @@
 TODO List
 ------------
-* Ignore binary files option
-* Ignore case option
-* <Enter> key executes Find (when results not selected, otherwise open selected file)
 * Multiple filespec support (e.g. *.py, *.cpp)
-* Don't Recurse Subdirs option
 * Pass pattern on command line
 
 
 Done List
 ------------
 History support !
+<Enter> key executes Find (when results not selected, otherwise open selected file)
+Ignore binary files option
+Ignore case option
+Don't Recurse Subdirs option
